add integration and unit tests
